# openfmb.adapters.udp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  adapter.yaml  template.yaml
.github/workflows/: rust-build.yml
adapter/: Cargo.toml
adapter-util/: Cargo.toml
adapter-util/src/: adapter_config.rs  lib.rs  utils.rs
adapter-util/src/configuration/: mod.rs
adapter-util/src/configuration/common/: mod.rs
adapter-util/src/configuration/switch/: mod.rs  switch_discrete_control_profile_mapping.rs  switch_reading_profile_mapping.rs  switch_status_profile_mapping.rs
adapter-util/src/visitors/: enums.rs  mod.rs
adapter-util/src/visitors/switch/: discrete.rs  mod.rs  reading.rs  status.rs  visitor.rs
adapter/src/: main.rs
adapter/src/processors/: mod.rs  switch.rs
oes/: Cargo.toml
oes/examples/: listener.rs  turn_off.rs  turn_on.rs
oes/src/: connector.rs  lib.rs  messages.rs  opcode.rs  stack_config.rs
scripts/: license_files.sh
