[package]
name = "udp-adapter"
version = "0.1.0"
authors = ["Cory Nguyen <cory@openenergysolutionsinc.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
openfmb = {git = "https://github.com/openenergysolutions/openfmb-rs.git", features = ["zenoh", "client"]}
openfmb-messages-ext = {git = "https://github.com/openenergysolutions/openfmb-rs.git"}
oes = { path = "../oes" }
adapter-util = { path = "../adapter-util" }
serde = {version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9"
futures = { version = "0.3.13", default-features = true }
log = "0.4"
pretty_env_logger = "0.5"
prost = "0.10.4"
uuid = "1.1.2"
ctrlc = "3.1.9"
