[package]
name = "oes"
version = "0.1.0"
edition = "2021"
authors = ["Cory Nguyen <cory@openenergysolutions.com>"]
description = "An OES Plug data modeling and helper crate"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = {version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
bytes = "1"
log = "0.4"
futures = "0.3"
uuid = "1.1.2"
global_counter = "0.2.2"
tokio-udp = "0.1.6"

[dev-dependencies]
pretty_env_logger = "0.5"
serde_yaml = "0.9"
